[package]
name = "convex_hull_filtering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
wasm-bindgen = "0.2"
js-sys = "0.3.66"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]
